More changes from pubs 2/21 meeting

--- a/publications.tex
+++ b/publications.tex
@@ -9,7 +9,7 @@
 %CMB-S4 publication and talks bylaws Established March 2018
 
 \subsection{Principles}
-This policy seeks to ensure an equitable distribution of credit for work in the CMB-S4 Collaboration, to encourage and incentivize active work by collaboration members, and to ensure the resulting publications are of high quality. The authorship policy of the American Physical Society (2002) states: \textit{``Authorship should be limited to those who have made a significant contribution to the concept, design, execution or interpretation of the research study. All those who have made significant contributions should be offered the opportunity to be listed as authors.''}\footnote{\url{https\://www.aps.org/policy/statements/02\_2\.cfm}}
+This policy seeks to ensure an equitable distribution of credit for work in the CMB-S4 Collaboration, to encourage and incentivize active work by collaboration members, and to ensure the resulting publications are of high quality. The authorship policy of the American Physical Society (2002) states: \textit{``Authorship should be limited to those who have made a significant contribution to the concept, design, execution or interpretation of the research study. All those who have made significant contributions should be offered the opportunity to be listed as authors.''}\footnote{\url{https://www.aps.org/policy/statements/02_2.cfm}}
 
 The Publication Policy will apply to all projects and publications that employ collaboration resources, including unreleased data, simulation codes and products, hardware and software
 engineering designs, and analysis pipelines. All CMB-S4 collaboration members agree to the publication policy upon joining, and if they leave the collaboration, they are bound by it for two years afterward.
@@ -35,17 +35,17 @@ After discussion, resolution of conflicts, and consensus within the Working Grou
 
 The Science Council may then approve the project or send it back to the Working Group for further revision.  In the event of a tie vote in the Science Council, the collaboration spokesperson  will cast the deciding vote.  When approved, the Publication Board will record the proposal in its project database.  Once recorded, the collaboration may not re-classify a standard project as key without the written agreement of all named project team members.  If there is any substantial change in the scope of a project as it matures, the Project Leader should adjust the project description accordingly, which will result in a new announcement and opportunity for collaboration review.
 
-Projects led by thesis students will be given special consideration to protect them from competition within the collaboration.  Projects that require joint work with an external collaboration will require a memorandum of understanding set up by the Governance Board that specifies authorship and publication policies for that work.  These should be as compatible as possible with the respective collaboration policies.  Projects may add individual external collaborators to the team provided that no unreleased data is provided to them.
+Projects led by thesis students will be given special consideration to protect them from competition within the collaboration.  Projects that require joint work with an external collaboration will require a memorandum of understanding set up by the External Collaborators Committee that specifies authorship and publication policies for that work.  These should be as compatible as possible with the respective collaboration policies.  Projects may add individual external collaborators to the team provided that no unreleased data is provided to them.
 
 Project teams have the responsibility to carry projects to completion and publication.  The Publication Board will query the working group coordinators twice yearly for progress reports on all projects, and forward the results to the Science Council.  Any projects without progress for one year will be noted as ``inactive'' and will be dropped from the database if there is still no progress at the next review.
 
 \subsection{Authorship}
 %\Comment{[Ed. note: Aside from the concept of ``Key science'' vs ``standard papers,'' the main dispute in this section relates to opt-in/opt-out as the default, or whether a weak opt-in is any better than an opt-out.]}
 
-For the purposes of authorship, ``active collaboration members'' consist of Senior, Postdoctoral, and Graduate members of the collaboration as defined in the membership council bylaws.  Provisional member may appear on papers to which they actively contribute.  The three types of projects differ in their authorship rules.
+For the purposes of authorship, ``active members'' consist of Senior, Postdoctoral, and Graduate members of the collaboration as defined in the membership council bylaws.  Provisional member may appear on papers to which they actively contribute.  The three types of projects differ in their authorship rules.
 
 \begin{enumerate}
-\item For Key papers, all active members of the collaboration and all legacy members will automatically be placed on the author list.  The author list will start with ``The CMB-S4 Collaboration'' and otherwise be alphabetical.  The project team will designate a small number of corresponding authors.  The Membership Board will provide the current list of eligible active and legacy members to the Publication Board, who will maintain an online process for members who choose to opt out of the paper.
+\item For Key papers, all active members of the collaboration and all legacy members will automatically be placed on the author list.  The author list will start with ``The CMB-S4 Collaboration'' and otherwise be alphabetical.  The project team will designate a small number of corresponding authors to signify those most involved with the work.  The Membership Board will provide the current list of eligible active and legacy members to the Publication Board, who will maintain an online process for members who choose to opt out of the paper.
 \item For standard papers, the author list will be two-tiered.
 %  The first tier will typically consist of untenured (or equivalent) members of the project team, ordered according to their preference.  (The publication panel can allow exceptions for senior scientists in the first tier in rare cases when justified by their contribution.)
   Project teams may organize the first author tier as appropriate for the paper, and although not required, conventionally the tenured members of the project team will appear in the second, alphabetical tier of authors.
@@ -55,7 +55,7 @@ For the purposes of authorship, ``active collaboration members'' consist of Seni
 \end{enumerate}
 
 
-Any disputes regarding authorship will be resolved by the Publication Board with the Spokesperson providing a tie-breaking vote if necessary.  If an eligible member is unable to opt in, due to an unforeseen circumstance, the Publication Board may add them to the author list.
+Any disputes regarding authorship will be resolved by the Publication Board with the Spokespersons providing  tie-breaking votes if necessary.  If an eligible member is unable to opt in, due to an unforeseen circumstance, the Publication Board may add them to the author list.
 
 \subsection{Collaboration Review and Paper Submission Process}
 %\Comment{[Ed. note: the timing of the formation of the review team with respect to collaboration-wide review is a point of debate.  Some feel that the reviewers should be assigned early, so that they can iterate more with the authors on the paper.  Others feel the assignment of the editors should only happen at the beginning of the collaboration-wide formal review, otherwise the review process is too closed and not democratic.  The scheme below has a mix of these features.]}
@@ -64,7 +64,7 @@ The project leader and the project team have the responsibility to draft the pub
 
 This internal review committee consists of a primary and a secondary reviewer who have the responsibility that the collaboration's publications are of uniform and high quality.  The reviewers are not current members of the Publication Board, but the Publication Board assigns one of its members to oversee the review of the paper as a rapporteur.  At least one of the reviewers or rapporteur should be a senior scientist who can insulate junior participants (whether authors, reviewers, or rapporteurs) from unfair criticism, if it occurs.
 
-The Publication Board will notify the full collaboration that the internal review committee has formed.  Collaboration members may comment on the draft at any time, but when the authors are ready, the Publication board will sent announcement of a formal three-week comment period.  After the this comment period, the reviewers will provide a written report on the paper to the authors and Publication Board.
+The Publication Board will notify the full collaboration that the internal review committee has formed.  Collaboration members may comment on the draft at any time, but when the authors are ready, the Publication board will send an announcement of a formal three-week comment period.  After the this comment period, the reviewers will provide a written report on the paper to the authors and Publication Board.
 
 All public comments, from collaboration members and from reviewers, are to be posted to a centralized location maintained by the Publication Board, along with the authors' responses.  All collaboration members have access to these previously asked questions and responses.
 
@@ -85,9 +85,9 @@ In total, all projects/papers will have four formal public announcements to the 
 
 All CMB-S4 publications, including proceedings and theses, must include a standard acknowledgment, agreed to and updated by the Governing Board, and made available by the Publication Board.  The CMB-S4 Collaboration will pay the page charges for Key papers. For all other papers, the page charges are the responsibility of the authors.
 
-Any disputes regarding the review process will be resolved by the Publication Board with the Spokesperson providing a tie-breaking vote if necessary. In the case of a time-sensitive discovery, the review period may be shortened by unanimous consent of the Publication Board.
+Any disputes regarding the review process will be resolved by the Publication Board with the Spokespersons providing tie-breaking votes if necessary. In the case of a time-sensitive discovery, the review period may be shortened by unanimous consent of the Publication Board.
 
-Graduate Thesis and dissertation documents are exempted from collaboration review, but related publications (e.g. developed from an individual chapter) are subject to review.
+Graduate thesis and dissertation documents are exempted from collaboration review, but related publications (e.g.~developed from an individual chapter) are subject to review.
 
 \subsection{Talks and Public communications}
 %\Comment{[Ed. note: This is based on the non-controversial interim policy.]}
@@ -102,7 +102,7 @@ The role of the Speakers Bureau is to help collaboration members give more and b
 \item Address overlap from multiple requests to give talks on the same subject at the same conference, ideally by suggesting focus changes to make them on different topics. Talk prioritization will be at the committee's best judgment, but should reflect contributions to the topic in question, career status, whether the speaker was invited, and other similar factors.
 \end{itemize}
 
-To give a talk, whether contributed to a conference/workshop or invited,  a collaboration member must notify the speakers bureau. This ensures that the speakers bureau has a chance to address overlapping talk request or, in the case of declined invitations, can locate another appropriate speaker.  The talks policy applies to all workshops, meetings, colloquia, public lectures, and seminars.  The policy does not apply to talks on other subjects that contain brief advertisements for CMB-S4 (this is highly encouraged), to invited presentations that must remain confidential for programmatic reasons (e.g. certain agency reviews or presentations to private foundations or donors), or to informal presentation at collaboration members' home institutions.  
+To give a talk, whether contributed to a conference/workshop or invited,  a collaboration member must notify the Speakers Bureau. This ensures that the Speakers Bureau has a chance to address overlapping talk request or, in the case of declined invitations, can locate another appropriate speaker.  The talks policy applies to all workshops, meetings, colloquia, public lectures, and seminars.  The policy does not apply to talks on other subjects that contain brief advertisements for CMB-S4, to invited presentations that must remain confidential for programmatic reasons (e.g.~certain agency reviews or presentations to private foundations or donors), or to informal presentation at collaboration members' home institutions.  
 
 All talks must maintain confidentiality for the project. For all talks except those exempted in above, collaboration members must send abstracts and titles to the collaboration at least three days prior to submission, or as soon as possible in the event of last-minute invitations. Slides must be sent to the collaboration at least one week before being presented and should include ``for the CMB-S4 collaboration" on the title slide.
 
@@ -111,12 +111,10 @@ Unpublished results shown in talks, including those talks exempted in above but 
 The Speakers Bureau will maintain records of all presentations given in the name of the collaboration, and serve as a clearinghouse for talk invitations forwarded from any member.  
 
 \subsection{Violations of the Policy and Remedies}
-Violations of the policy will be addressed by the Publication Board, which will recommend a remedy to the Governance Board.  Minor infractions will receive a warning, while repeated or severe infractions may warrant suspension from project teams or working group activities, removal from such groups, or expulsion from the collaboration, as determined by the Governance Board.
+Violations of the policy will be addressed by the Publication Board, which will forward violations and recommend a remedy to the Executive Team.  Minor infractions will receive a warning, while repeated or severe infractions may warrant suspension from project teams or working group activities, removal from such groups, or expulsion from the collaboration as determined by the Governance Board.
 
-\subsection{Amendments}
-Any collaboration member can propose an amendment to the Publication/Speakers Policy. The Publication and Speakers will jointly discuss the amendment and forward a recommendation to the Governance Board for a final, majority vote.
-
-
+%\subsection{Amendments}
+%Any collaboration member can propose an amendment to the Publication/Speakers Policy. The Publication and Speakers will jointly discuss the amendment and forward a recommendation to the Governance Board for a final, majority vote.
 
 
 
@@ -124,69 +122,6 @@ Any collaboration member can propose an amendment to the Publication/Speakers Po
 
 
 
-\subsection{Key Science Topics}
-%\Comment{[Ed. note: below are various suggestions for topics that could be considered ``Key'' papers and given alphabetical author lists.  They are organized from narrow to broad scope, where the broadest scope includes all science with CMB-S4.  \textbf{These should be a separate document maintained by the Science Council and not in the bylaws.}]}
-
-\subsubsection{Proposed list of Key Science topics (Super narrow scope)}
-
-(Idea is ``achieved S4 science target from Science book or detection")
-
-Overview Papers
-
-Data release of maps
-
-B-mode detection or achieved S4 science target
-
-Neutrino mass detection or achieved S4 science target
-
-Neff detection or achieved S4 science target
-
-Dark matter detection or achieved S4 science target 
-
-New highly-significant discovery, such as a new planet
-
-\subsubsection{Proposed list of Key Science topics (Narrow scope)} 
-
-(Idea is ``new measurements from Science book")
-
-Overview Papers
-
-Data release of maps
-
-B-mode limits (e.g. updated annually) or detection
-
-Neutrino mass limits or detection
-
-Neff limits or detection
-
-Dark matter limits or detection (axion isocurvature, etc.)
-
-New highly-significant discovery, such as a new planet
-
-\subsubsection{Proposed list of Key Science topics (Broad scope)}
-
-(Idea is ``all data products")
-
-Overview Papers
-
-Data release of maps
-
-T/E/B Power Spectra (including B mode limits/detection)
-
-Lensing Potential Map and Power spectra
-
-Release of Likelihood
-
-Cosmological Parameters (including all neutrino mass, Neff, dark matter limits/detections)
-
-Galaxy Cluster Catalog
-
-Point Source Catalog
-
-\subsubsection{Proposed list of Key Science topics (Broadest scope)}
-(Idea is ``all data products and all science from the sky")
-
-Key Science topics could include almost everything except technical papers and lab-characterizations of equipment
 
 
 
