Edits to Preamble, named EVC, other small edits

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -37,22 +37,25 @@
 
 \newpage
 
-\section{Collaboration Governance Objectives/Preamble}
 
-{ \it 
-The CMB-S4 collaboration will carry out a CMB science program including the design and construction of the future experiment that is intended to be the definitive ground-based CMB program. CMB-S4 will deliver a highly constraining data set with which any model for the origin of the primordial fluctuations---be it inflation or an alternative theory---and their evolution to the structure seen in the Universe today must be consistent. This document outlines the CMB-S4 collaboration governance and organization of scientific activities. The collaboration will adhere to the following principles:
-}
+%\section{Collaboration Governance Objectives/Preamble}
+\section{Preamble}
+
+The CMB-S4 collaboration will carry out a CMB science program including the design and construction of the future experiment that is intended to be the definitive ground-based CMB program. CMB-S4 will deliver a highly constraining data set with which any model for the origin of the primordial fluctuations---be it inflation or an alternative theory---and their evolution to the structure seen in the Universe today must be consistent. This document outlines the CMB-S4 collaboration governance and organization of scientific activities.
+
+\subsection{Collaboration Governance Objectives}
+ The collaboration will adhere to the following principles:
 
 \begin{itemize}
-\item The Collaboration will be organized based on models used in other successful DOE and NSF-supported Cosmic Frontier experiments.
+\item The Collaboration will be organized based on models used in other successful  large DOE and NSF-supported experiments.  %Cosmic Frontier 
 
 \item The Collaboration will strive to maximize the scientific return of the experiment, producing high-quality science in a timely manner and promoting full utilization of the data through public data releases after a suitable proprietary period.
 
-\item The organizational structure of the collaboration should enable broad representation of members, while fostering consensus in decision making.
+\item The organizational structure of the collaboration should enable broad representation of members, and encourage consensus in decision making. %while fostering 
 
-\item The organizational structure should incentivize collaboration members to contribute to the execution of the project including hardware, software, testing, commissioning, operations, common science infrastructure, documentation and publication.  
+\item   All members of the collaboration will be expected to contribute to the success of the project through work on one or more areas of necessary infrastructure. The organizational structure should incentivize collaboration members to contribute to the execution of the project including work on hardware, software, testing, commissioning, operations, common science infrastructure, documentation and publications.  
 
-\item All members of the CMB-S4 Collaboration will be expected to contribute to the success of the project through work on one or more areas of necessary infrastructure.
+%\item All members of the collaboration will be expected to contribute to the success of the project through work on one or more areas of necessary infrastructure.
 
 \item Towards this end, the collaboration should provide appropriate credit to data analysts, hardware and/or software builders; provide leadership opportunities and other opportunities to promote career advancement; motivate people to work together towards common goals to complete the key project deliverables; and provide a healthy collaboration culture that establishes standards for behavior consistent with high ethical standards.
 
@@ -61,7 +64,11 @@ The CMB-S4 collaboration will carry out a CMB science program including the desi
 
 \subsection{Definitions}
 
-Throughout this document, unless otherwise stated, a ``majority" is defined as more than one-half of the votes received, and a ``super-majority" is defined as more than two-thirds of the votes received. A ``voting member" is defined in the membership policy section of the governing documents. The presence of a simple majority of a body's members constitutes quorum for a meeting, and two-thirds of a body must be present for a vote to be valid.
+Throughout this document,  a ``supermajority vote" is defined as a result with more than two-thirds of the votes received in favor of the motion.   A ``majority vote" requires only half the votes received.   Two-thirds of eligible voters must cast votes (including abstentions) for a vote to be valid.    A ``quorum" for a meeting is defined as the presence of a majority of a body's members.   For collaboration-wide votes, a ``Voting Member" is  defined as a Senior Member or a Postdoctoral Member (see \S\ref{sec:memberrights}). ``Ex officio" members of a governance body are those whose membership is due to their roles elsewhere in the Collaboration.  For example, the Science Council chairs (\S\ref{sec:SC}) are ex officio members of the Executive Team (\S\ref{sec:exec}).  
+
+ %The presence of a simple majority of a body's members constitutes quorum for a meeting, and two-thirds of a body must be present for a vote to be valid.
+
+%Add definition of Òex officioÓ membership as membership by virtue of having another role, so that the Science Council chairs are ex officio members of the ET,  and when a new chair is elected, the old chair rolls off the ET. 
 
 
 
@@ -131,12 +138,12 @@ Every year, starting with the inception of the GB, the chair of the GB is electe
 
 
 \subsection{Governing Board Meetings}
-\textit{The first chaired Governing Board will establish rules for its meetings}. This first meeting will be held no later than 2 months after the selection of the board.  It is expected that the board will meet no less than every two months to ensure adequate attention to its duties. Such meetings will likely occur in closed session at every CMB-S4 collaboration meeting and in meetings held by telephone or video conference. Special meetings can be called on the initiative of the GB chair or at the request a GB representative. 
+\textit{The first chaired Governing Board will establish rules for its meetings}. This first meeting will be held no later than 2 months after the selection of the board.  It is expected that the board will meet no less than every two months to ensure adequate attention to its duties. Such meetings will likely occur in closed session at every CMB-S4 collaboration meeting and in meetings held by telephone or video conference. Special meetings can be called on the initiative of the GB chair or at the request a GB representative. Each meeting requires a quorum to conduct official GB business.
 GB votes can be held by email. Minutes of the GB meetings are distributed to the full CMB S4-collaboration by the GB chair or GB secretary. These minutes must include meeting attendance and the records of the votes cast by all GB members. It is the expectation that GB members participate in the majority of meetings. If a GB member fails to participate (via meeting attendance or email) in $>50\%$ of GB meetings in a year, their seat will be open to election during the following cycle and they will be barred from the board for a two year term.  
 
-\subsection{Election Committee}
-The Election Committee consists of 3 members (a chair and two additional members) appointed  by the Governing Board. The committee is charged with conducting elections as spelled out in Section \ref{sec:elections}. This committee acts \textbf{independently} of the Governing Board, but any points of substantive disagreement amongst the members should be referred back to the GB.  Committee members serve two year terms, with the exception of the chair who will serve a 3 year term at the start of the collaboration (the chair position is a 2 year term thereafter) to enable a continuity between committees. There are no term limits for this committee. Committee members may be removed via approval of a super-majority of Governing Board members. 
- 
+\subsection{Election and Voting Commission}
+The GB appoints the chair and two additional members of the Election and Voting Commission (EVC).  The EVC is charged with conducting elections as spelled out in \S\ref{sec:elections}. The EVC acts \textbf{independently} of the GB, but any points of substantive disagreement amongst the members should be referred back to the GB.  Commission members serve two-year terms ordinarily.  However, the GB may choose to extend the first term of the chair to  three years, to allow staggering of the membership for improved continuity between commissions.   Commission members may be removed with a supermajority vote of the GB.
+ % , with the exception of the chair who will serve a three-year term at the start of the collaboration (the chair position is a 2 year term thereafter) to enable a continuity between commissions. There are no term limits for this commission. 
 \subsection{Amendments to the Governing Board Bylaws by the Governing Board} \label{subsec:amend}
 Any amendments made by the Governing Board that pertain to its own election,governance, and scope must be ratified by a majority of the voting members of the collaboration.
 
@@ -175,7 +182,7 @@ The GB can remove a spokesperson by a secret ballot, requiring approval by a sup
 
 \subsection{Scope}
 
-The \exec \ (\shorte) is an elected and appointed board that consists of up to 10 members: the co-spokespersons and both the elected chair and deputy of the science council, the elected chair and deputy of the technical council, the chair of the membership council, the chair of the publication and speakers council, and up to two appointed members. This Board is the agile decision making body in the collaboration with the ability to address the day-to-day collaboration issues. 
+The \exec \ (\shorte) is an elected and appointed board that consists of up to 10 members: the co-spokespersons and both the elected chair and deputy of the Science Council, the  chair and deputy of the Technical Council, the chair of the Membership Council, the chair of the Publication and Speakers council, and up to two appointed members. This Board is the agile decision making body in the collaboration with the ability to address the day-to-day collaboration issues. 
 
 The \exec \ has three main roles:
 \begin{itemize}
@@ -183,7 +190,7 @@ The \exec \ has three main roles:
 
 \item to provide leadership on scientific, membership, financial, and organizational decisions and issues. The decisions will ultimately be made by the co-spokespersons, but will be discussed and reasoned through the \exec.  However, any two \shorte members may call for a vote on any topic, and if $\geq 50\%$ of the board is in disagreement with proposed activities of the Spokesperson, the issue is referred to the Governing Board for further discussion. 
 
-\item to aide the co-spokespersons in being the collaboration liaison to the project. In the event that the co-spokespersons do not agree on a particular topic, the \shorte will hold a vote requiring only a majority.
+\item to aid the co-spokespersons in being the collaboration liaison to the project. In the event that the co-spokespersons do not agree on a particular topic, the \shorte will hold a vote requiring only a majority.
 
 \end{itemize}
 
@@ -195,7 +202,7 @@ As with a co-spokesperson, the GB can remove an \shorte member by a vote, requir
 
 \subsection{\exec \ Meetings}
 
-The co-spokespersons will chair the meetings, provide the agenda, and establish rules for these meetings. This first meeting will be held no later than 2 weeks after the election of co-spokespersons and the committee chairs. It is expected that the board will meet no less than twice-a-month to ensure adequate attention to its duties. Meetings can be called on the initiative of a co-spokesperson or at the request an \shorte member provided that a co-spokesperson agrees. A summary of the \shorte meetings will be distributed to the collaboration. It is the expectation that \shorte members participate in the majority of meetings; \shorte members who fail to participate via active live attendance or email in $\geq 50\%$ of meetings will be replaced in the nearest election cycle and barred from the \shorte for a two year term.  
+The co-spokespersons will chair the meetings, provide the agenda, and establish rules for these meetings. This first meeting will be held no later than 2 weeks after the election of co-spokespersons and the committee chairs. It is expected that the board will meet no less than twice a month to ensure adequate attention to its duties. Meetings can be called on the initiative of a co-spokesperson or at the request an \shorte member provided that a co-spokesperson agrees. A summary of the \shorte meetings will be distributed to the collaboration. Each meeting requires a quorum to conduct official ET business.  It is the expectation that \shorte members participate in the majority of meetings; \shorte members who fail to participate via active live attendance or email in $\geq 50\%$ of meetings will be replaced in the nearest election cycle and barred from the \shorte for a two year term.  
 
 
 \section{Elections}\label{sec:elections}
@@ -246,6 +253,7 @@ For other elected Collaboration roles, the Election Committee is charged with es
 
 
 \section{Science Council}
+\label{sec:SC}
 
 The Science Council is one of the major bodies established by the Governing board and overseen by the Spokespersons. It is charged to coordinate---in consultation with the co-spokespersons---the key scientific objectives of the CMB S4 collaboration. The Science council chairs are also members of the \exec. \textcolor{red}{The Science Council is responsible for maintaining a list of ``Key'' Science Topics as discussed in Section (PUB SECTION)}. 
 
@@ -271,8 +279,111 @@ The Membership Council (MC) consists of 7 people including a council chair. The 
 
 The appointed members should represent the overall collaboration, and there should be at least 2 members from the technical working groups and 2 members from the analysis working groups in the overall council. This balance may be amended as the scientific needs of the collaboration evolve. \Comment{This leaves two spots to encompass people who might not fall neatly into either group.}
 
+\section{CMB-S4 Collaboration Membership Policy}
 
-\input{membership}
+The CMB-S4 collaboration consists of Ph.D. scientists, engineers, Ph.D. thesis students %undergraduate students, 
+and others who contribute significantly to the CMB-S4 program. Membership conveys certain rights as described below, but comes with the obligation of an ongoing commitment of a substantial fraction of members' research time to the CMB-S4 program.
+
+\vspace{0.2in}
+\noindent
+
+
+\subsection{Membership Council}
+
+The duties of the Membership Council are to review and evaluate membership applications, review annual activity reports, and recommend changes in membership status. 
+
+\subsection{Membership Types}
+
+\begin{itemize}
+
+\item {\bf Senior Member:} A Senior Member of the collaboration is a member who has a permanent appointment or an appointment, that under normal circumstances can be expected to be renewed indefinitely.   This includes tenure-track appointments at universities and their equivalents elsewhere.  
+
+\item {\bf Postdoctoral Member:} A postdoc working with a Senior Member at their institution can be designated as a Postdoctoral Member by that Senior Member.  Postdocs that reside at an institution where there is no Senior Member can apply to become a Postdoctoral Member and have their application evaluated by the Membership Council on a case-by-case basis. 
+
+\item {\bf Student Member:} A graduate student working with a Senior Member at their institution can be designated as a Student Member by that Senior Member.  We do not anticipate granting membership to students who are not supervised by a Senior Member.
+
+\item {\bf Provisional Member:}  A Provisional Member is a potential senior member who has not yet been approved for senior member status.  This is intended to be a temporary status allowing the member to demonstrate constructive engagement with the collaboration at a level that qualifies them for Senior Membership.
+
+\item {\bf Legacy Member:}  A Legacy Member is a former member who contributed in a key manner to the project infrastructure, but is no longer engaged with the collaboration and is therefore no longer a member.  This status is intended to convey authorship rights to such former members, and to bypass the normal membership procedures should they wish to re-engage with the collaboration.
+
+\end{itemize}
+
+
+
+\subsection{Membership Rights}\label{sec:memberrights}
+
+Herein, ``members'' refers to Senior, Postdoctoral, Student and Provisional members (but not Legacy Members) unless otherwise qualified.  
+
+\begin{itemize}
+
+\item Senior and Postdoctoral Members are Voting Members.  Voting Members  have the right to vote to ratify Bylaws and amendments to Bylaws, and vote in elections for Spokespersons, Governance Board representatives, and othe elected positions including the chairs of the Science, Membership, and Publication and Speakers Councils.  %vote for representation on the Governing Board.  
+
+\item Members have full data access, including during the proprietary period for data that are eventually released.
+
+\item Members (including Legacy Members) have the right to be listed as a co-author on CMB-S4 publications as specified in the Publication Policy.
+
+\item Members have access to computational resources designated for CMB-S4, according to the policies of the relevant computational resources working group.
+
+\end{itemize}
+
+\subsection{Membership Requirements}
+\begin{itemize}
+
+\item Members must commit effort to approved infrastructure tasks, which can include, for example, designing, building, and testing software, hardware, or simulations, as well as management. 
+
+\end{itemize}
+
+\subsection{Membership Application and Approval Process}
+After the CMB-S4 collaboration is formed with a first set of initial members (see Section \ref{sec:initmembership}), the process for membership to CMB-S4 will be as specified below.
+
+\begin{itemize}
+
+\item Potential Senior Members will apply for Provisonal Membership via a written application where they specify their proposed work on CMB-S4. 
+
+\item Independent postdocs not co-located with a Senior Member can apply for Postdoctoral Membership and have their application reviewed on a case-by-case basis. 
+
+\item Postdoctoral members can apply for ``Intended Senior Membership Status", which would convey that the postdoc will have Senior Membership status when moving to a permanent appointment or an appointment that, under normal circumstances, can be expected to be renewed indefinitely.  The Membership Council will decide the requirements for achieving this status, the achievement of which grants Senior Membership at the new institution.
+
+\item Applications are reviewed by the Membership Council. The Membership Council recommends membership to the Governing Board.  The Governing Board approves membership.
+
+\end{itemize}
+
+\subsection{Initial Membership}
+\label{sec:initmembership}
+The CMB-S4 collaboration will initially consist of members who have satisfied the following criteria:
+
+\begin{itemize}
+\item Attended at least two CMB-S4 collaboration meetings, and 
+
+\item Voted on the governance bylaws.
+\end{itemize}
+
+Within the first year of the Collaboration's establishment, prospective members can be granted membership by successfully petitioning the Membership Council despite not satisfying the above criteria.  The Membership Council may approve such applications during the first year without action by the Governing Board.  
+
+\subsection{Membership Review and Changes in Status}
+\begin{itemize} 
+
+\item Each Senior Member, and each independent postdoc not co-located with a Senior Member, will submit an annual activity report to the Membershp Council.  Senior members can discuss activities of their supervisees (e.g. postdocs and students) in their report. The Membership Council will review those reports, consulting with collaboration members and working group leaders as appropriate.
+
+\item Provisional members will submit a annual activity report to the Membership Council, which will review the report and determine whether the provisional member should be promoted to a Senior Member status, continue as a Provisional Member, or have their membership revoked.  Provisional Membership is intended to be a temporary status.
+
+\item Members leaving the collaboration may be granted Legacy Membership upon review by the Membership Council and approval by the Govering Board.
+
+\item If the effort of any member over the previous year seems lacking, the Membership Council will bring this to the attention of the Co-spokepersons and the Governing Board.  This can also be done at any time, should the Membership Council deem the actions of a member to have been egregious and detrimental to CMB-S4.
+
+\item The Governing Board has the authority to grant or terminate all forms of membership.
+
+\item When a person's membership in the collaboration is terminated, they will no longer have access to the CMB-S4 document and database repository, internal forums, computing resources and data.  Authorship rights will continue, or not, as prescribed in the Publication Policy bylaws.
+
+
+\end{itemize}
+
+\subsection{Procedure to Change Membership Policies}
+
+The Governing Board may change Membership policies by a 2/3 majority vote of voting members.
+
+%\input{membership}
+
 
 
 \section{Junior Scientist Advancement Committee}
